# pasteur

./: .clog.toml  .travis.yml  CHANGELOG.md  Cargo.dot  Cargo.toml  Procfile  README.md  app.json  build.rs  cli.yml  index.html  rustfmt.toml  search-index.js
ca/: cert.pem  key.pem
etc/locales/: fr-FR.l20n
etc/stylesheets/: book.scss  index.scss
etc/templates/: head.hbs  index.hbs
etc/templates/page/: prologue.hbs
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Display.js
implementors/iron/middleware/: trait.BeforeMiddleware.js
implementors/typemap/: trait.Key.js
locales/: en-US.l20n  fr-FR.l20n  fr.l20n
pasteur/: fn.new.html  index.html  sidebar-items.js
pasteur/middlewares/: index.html  sidebar-items.js  struct.DesctiptionLang.html  struct.ShareLang.html  struct.ShareStyle.html
pasteur/middlewares/lang/: index.html  sidebar-items.js  struct.DesctiptionLang.html  struct.Lang.html  struct.ShareLang.html  type.Directionary.html  type.Environement.html
pasteur/middlewares/style/: index.html  sidebar-items.js  struct.DesctiptionStyle.html  struct.ShareStyle.html  struct.Style.html
pasteur/protocol/: enum.Protocol.html  index.html  sidebar-items.js
pasteur/views/: fn.index.html  index.html  sidebar-items.js
pasteur/views/generic/: fn.prologue.html  index.html  sidebar-items.js
pasteur/views/head/: fn.get.html  (+1 more)
src/: cli.yml  lang.rs  lib.rs  main.rs  protocol.rs
src/middleware/: lang.rs  mod.rs
src/middlewares/: lang.rs  mod.rs  style.rs
src/views/: head.rs  index.rs  mod.rs
templates/: index.hbs
(+20 files in other folders)
